sort.basic.lessons.sort.basic.comb.AlgCombSort.scala.error
AlgCombSort:19: error: missing arguments for method || in class Boolean;
follow this method with `_' if you want to treat it as a partially applied function
while ((ecart > 1) || i=1)
                   ^